<resources>
    <string name="app_name">EUGLOH App</string>
    <string name="accueil_titre">Bienvenue sur EUGLOH APP Campus Université Paris-Saclay</string>
    <string name="accueil_message">ACCÉDER AUX FONCTIONNALITÉES DE L\'APPLICATION</string>
    <string name="commencer">Commencer</string>
    <string name="titre">Titre</string>
    <string name="localisation">Localisation</string>
    <string name="groupe_cible">Groupe Cible</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="proposer_events">Proposer l\'évènement</string>
    <string name="date_news">Date</string>
    <string name="titre_item">Titre :</string>
    <string name="date_item">Date :</string>
    <string name="localisation_item">Localisation :</string>
    <string name="groupe_item">Groupe Cible :</string>
    <string name="host_item">Host :</string>
    <string name="date_limite_item">Date limite :</string>
    <string name="description_item">Description :</string>
    <string name="sinscrire">S\'inscrire</string>
    <string name="valider">Accepter</string>
    <string name="refuser">Refuser</string>
    <string name="host">Host</string>
    <string name="description_news">Description</string>
    <string name="proposer_news">Proposer la news</string>
    <string name="bienvenue">Bienvenue sur EuglohApp</string>
    <string name="bien"> Bienvenue sur EuglohApp ! Vous n\'êtes connecté à aucun compte. Vos droits sont donc limités !</string>
    <string name="connectez">Connectez-vous pour s\'inscrire !</string>
    <string name="event">Evenement accepté avec succés !</string>
    <string name="news">News accepté avec succés !</string>
    <string name="eventR">Evenement refusé !</string>
    <string name="newsR">News refusée !</string>
    <string name="chargement">Chargement des données …</string>
    <string name="deja">Vous êtes déjà sur la page des evenements !</string>
    <string name="deja2">Vous êtes déjà sur la page des news !</string>
    <string name="proposition">Proposition réalisée avec succés !</string>
    <string name="erreur">Une erreur est survenue, veuillez réessayer</string>
    <string name="dejaevent">Vous êtes déjà sur la pages de proposition d\'evenements !</string>
    <string name="dejanews">Vous êtes déjà sur la pages de proposition de news !</string>
    <string name="aucune">Aucune proposition d\'evenement réalisée</string>
    <string name="validevent">Vous êtes déjà sur la page de validation d\'evenements !</string>
    <string name="validenews">Vous êtes déjà sur la page de validation de news !</string>
    <string name="aucunn">Aucune proposition de news réalisée</string>
    <string name="date_limite">Date Limite</string>
    <string name="t1">Seul les étudiants peuvents s\'inscrire !</string>
    <string name="t2">Demande d\'inscription envoyée !</string>
    <string name="t3">Connectez-vous pour vous inscrire !</string>
</resources>